ankle Changelog
===============

Version 0.2.0
-------------

- Add support for checking node text in skeletons

Version 0.1.0
-------------

- Initial release